apps/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: woitekku
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: 'arn:aws:acm:eu-central-1:164820026678:certificate/70648ebf-a43d-483c-a229-d5d24316dd3a'
    alb.ingress.kubernetes.io/group.name: woitekku
    external-dns.alpha.kubernetes.io/hostname: app.workshop.cichy.io
spec:
  ingressClassName: alb
  rules:
  - host: app.workshop.cichy.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
